* Misc fixes for the following PEP8 issues:
  - E127, E128, 201, 202, 203
  - see http://pep8.readthedocs.org
* Fixed bug # 1414418
  - Aligned commandline.py options and help display contents.
  - Aligned commandline.py options and manpage contents.
* Changed --s3_multipart_max_timeout to --s3-multipart-max-timeout to be
  consistent with commandline option naming conventions.
* Applied patch from Adam Reichold to fix bug # 1413792


New in v0.7.01 (2015/01/11)
---------------------------
Enhancements:
* Undid move of testing/test_code.py.  Instead I fixed it
  so that it would not run during PPA build.  It now needs
  the setting RUN_CODE_TESTS=1 in the environment which is
  supplied in the tox.ini file.
* Moved testing/test_code.py to testing/manual/code_test.py
  so PPA builds would succeed.  Should be moved back later.
* Remove valid_extension() check from file_naming.py.  It was
  causing failed tests for short filenames.  Thanks edso.
* Partial fix for PPA build failures, new backend name.
* Merged in lp:~ed.so/duplicity/fix.dpbx.import
  - fix dpbx import error import lazily
* Merged in lp:~hooloovoo/duplicity/fix-typo-in-test-description
  - Fixed spelling mistake/typo in a description of a test.
* Merged in lp:~mterry/duplicity/missing-unicode-escape
  - Convert restore_dir to unicode before printing.
* Merged in lp:~ed.so/duplicity/lftp.ncftp.and.prefixes
  - retire --ssh-backend, --use-scp parameters
  - introduce scheme prefixes for alternative backend selection
    e.g. ncftp+ftp://, see manpage
  - scp is now selected via scheme e.g. scp://
  - added lftp fish, webdav(s), sftp support
* Merged in lp:~mterry/duplicity/code-nits
  - Fix some pylint/pep8 nits that prevented the test_code.py test from passing.
* Merged in lp:~mterry/duplicity/debian-dir
  - Add a debian/ directory to make it easier to manage the PPAs for duplicity.
* In webdavbackend.py:
  - Fixed bug 1396106 with change by Tim Ruffing, mispelled member.